src/SysYParser.java
// Generated from ./src/SysYParser.g4 by ANTLR 4.9.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SysYParser extends Parser {
    static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            CONST=1, INT=2, VOID=3, IF=4, ELSE=5, WHILE=6, BREAK=7, CONTINUE=8, RETURN=9,
            PLUS=10, MINUS=11, MUL=12, DIV=13, MOD=14, ASSIGN=15, EQ=16, NEQ=17, LT=18,
            GT=19, LE=20, GE=21, NOT=22, AND=23, OR=24, L_PAREN=25, R_PAREN=26, L_BRACE=27,
            R_BRACE=28, L_BRACKT=29, R_BRACKT=30, COMMA=31, SEMICOLON=32, IDENT=33,
            INTEGR_CONST=34, WS=35, LINE_COMMENT=36, MULTILINE_COMMENT=37;
    public static final int
            RULE_program = 0, RULE_compUnit = 1, RULE_decl = 2, RULE_constDecl = 3,
            RULE_bType = 4, RULE_constDef = 5, RULE_constInitVal = 6, RULE_varDecl = 7,
            RULE_varDef = 8, RULE_initVal = 9, RULE_funcDef = 10, RULE_funcType = 11,
            RULE_funcFParams = 12, RULE_funcFParam = 13, RULE_block = 14, RULE_blockItem = 15,
            RULE_stmt = 16, RULE_exp = 17, RULE_cond = 18, RULE_lVal = 19, RULE_number = 20,
            RULE_unaryOp = 21, RULE_funcRParams = 22, RULE_param = 23, RULE_constExp = 24;
    private static String[] makeRuleNames() {
        return new String[] {
                "program", "compUnit", "decl", "constDecl", "bType", "constDef", "constInitVal",
                "varDecl", "varDef", "initVal", "funcDef", "funcType", "funcFParams",
                "funcFParam", "block", "blockItem", "stmt", "exp", "cond", "lVal", "number",
                "unaryOp", "funcRParams", "param", "constExp"
        };
    }
    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[] {
                null, "'const'", "'int'", "'void'", "'if'", "'else'", "'while'", "'break'",
                "'continue'", "'return'", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", "'=='",
                "'!='", "'<'", "'>'", "'<='", "'>='", "'!'", "'&&'", "'||'", "'('", "')'",
                "'{'", "'}'", "'['", "']'", "','", "';'"
        };
    }
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static String[] makeSymbolicNames() {
        return new String[] {
                null, "CONST", "INT", "VOID", "IF", "ELSE", "WHILE", "BREAK", "CONTINUE",
                "RETURN", "PLUS", "MINUS", "MUL", "DIV", "MOD", "ASSIGN", "EQ", "NEQ",
                "LT", "GT", "LE", "GE", "NOT", "AND", "OR", "L_PAREN", "R_PAREN", "L_BRACE",
                "R_BRACE", "L_BRACKT", "R_BRACKT", "COMMA", "SEMICOLON", "IDENT", "INTEGR_CONST",
                "WS", "LINE_COMMENT", "MULTILINE_COMMENT"
        };
    }
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() { return "SysYParser.g4"; }

    @Override
    public String[] getRuleNames() { return ruleNames; }

    @Override
    public String getSerializedATN() { return _serializedATN; }

    @Override
    public ATN getATN() { return _ATN; }

    public SysYParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
    }

    public static class ProgramContext extends ParserRuleContext {
        public CompUnitContext compUnit() {
            return getRuleContext(CompUnitContext.class,0);
        }
        public ProgramContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_program; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof SysYParserListener ) ((SysYParserListener)listener).enterProgram(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof SysYParserListener ) ((SysYParserListener)listener).exitProgram(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SysYParserVisitor ) return ((SysYParserVisitor<? extends T>)visitor).visitProgram(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_program);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(50);
                compUnit();
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class CompUnitContext extends ParserRuleContext {
        public TerminalNode EOF() { return getToken(SysYParser.EOF, 0); }
        public List<DeclContext> decl() {
            return getRuleContexts(DeclContext.class);
        }
        public DeclContext decl(int i) {
            return getRuleContext(DeclContext.class,i);
        }
        public List<FuncDefContext> funcDef() {
            return getRuleContexts(FuncDefContext.class);
        }
        public FuncDefContext funcDef(int i) {
            return getRuleContext(FuncDefContext.class,i);
        }
        public CompUnitContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_compUnit; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof SysYParserListener ) ((SysYParserListener)listener).enterCompUnit(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof SysYParserListener ) ((SysYParserListener)listener).exitCompUnit(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SysYParserVisitor ) return ((SysYParserVisitor<? extends T>)visitor).visitCompUnit(this);
            else return visitor.visitChildren(this);
        }
    }

    public final CompUnitContext compUnit() throws RecognitionException {
        CompUnitContext _localctx = new CompUnitContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_compUnit);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(54);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        setState(54);
                        _errHandler.sync(this);
                        switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
                            case 1:
                            {
                                setState(52);
                                decl();
                            }
                            break;
                            case 2:
                            {
                                setState(53);
                                funcDef();
                            }
                            break;
                        }
                    }
                    setState(56);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONST) | (1L << INT) | (1L << VOID))) != 0) );
                setState(58);
                match(EOF);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DeclContext extends ParserRuleContext {
        public ConstDeclContext constDecl() {
            return getRuleContext(ConstDeclContext.class,0);
        }
        public VarDeclContext varDecl() {
            return getRuleContext(VarDeclContext.class,0);
        }
        public DeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_decl; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof SysYParserListener ) ((SysYParserListener)listener).enterDecl(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof SysYParserListener ) ((SysYParserListener)listener).exitDecl(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SysYParserVisitor ) return ((SysYParserVisitor<? extends T>)visitor).visitDecl(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DeclContext decl() throws RecognitionException {
        DeclContext _localctx = new DeclContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_decl);
        try {
            setState(62);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case CONST:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(60);
                    constDecl();
                }
                break;
                case INT:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(61);
                    varDecl();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ConstDeclContext extends ParserRuleContext {
        public TerminalNode CONST() { return getToken(SysYParser.CONST, 0); }
        public BTypeContext bType() {
            return getRuleContext(BTypeContext.class,0);
        }
        public List<ConstDefContext> constDef() {
            return getRuleContexts(ConstDefContext.class);
        }
        public ConstDefContext constDef(int i) {
            return getRuleContext(ConstDefContext.class,i);
        }
        public TerminalNode SEMICOLON() { return getToken(SysYParser.SEMICOLON, 0); }
        public List<TerminalNode> COMMA() { return getTokens(SysYParser.COMMA); }
        public TerminalNode COMMA(int i) {
            return getToken(SysYParser.COMMA, i);
        }
        public ConstDeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_constDecl; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof SysYParserListener ) ((SysYParserListener)listener).enterConstDecl(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof SysYParserListener ) ((SysYParserListener)listener).exitConstDecl(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SysYParserVisitor ) return ((SysYParserVisitor<? extends T>)visitor).visitConstDecl(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ConstDeclContext constDecl() throws RecognitionException {
        ConstDeclContext _localctx = new ConstDeclContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_constDecl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(64);
                match(CONST);
                setState(65);
                bType();
                setState(66);
                constDef();
                setState(71);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la==COMMA) {
                    {
                        {
                            setState(67);
                            match(COMMA);
                            setState(68);
                            constDef();
                        }
                    }
                    setState(73);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(74);
                match(SEMICOLON);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class BTypeContext extends ParserRuleContext {
        public TerminalNode INT() { return getToken(SysYParser.INT, 0); }
        public BTypeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_bType; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof SysYParserListener ) ((SysYParserListener)listener).enterBType(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof SysYParserListener ) ((SysYParserListener)listener).exitBType(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SysYParserVisitor ) return ((SysYParserVisitor<? extends T>)visitor).visitBType(this);
            else return visitor.visitChildren(this);
        }
    }

    public final BTypeContext bType() throws RecognitionException {
        BTypeContext _localctx = new BTypeContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_bType);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(76);
                match(INT);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ConstDefContext extends ParserRuleContext {
        public TerminalNode IDENT() { return getToken(SysYParser.IDENT, 0); }
        public TerminalNode ASSIGN() { return getToken(SysYParser.ASSIGN, 0); }
        public ConstInitValContext constInitVal() {
            return getRuleContext(ConstInitValContext.class,0);
        }
        public List<TerminalNode> L_BRACKT() { return getTokens(SysYParser.L_BRACKT); }
        public TerminalNode L_BRACKT(int i) {
            return getToken(SysYParser.L_BRACKT, i);
        }
        public List<ConstExpContext> constExp() {
            return getRuleContexts(ConstExpContext.class);
        }
        public ConstExpContext constExp(int i) {
            return getRuleContext(ConstExpContext.class,i);
        }
        public List<TerminalNode> R_BRACKT() { return getTokens(SysYParser.R_BRACKT); }
        public TerminalNode R_BRACKT(int i) {
            return getToken(SysYParser.R_BRACKT, i);
        }
        public ConstDefContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_constDef; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof SysYParserListener ) ((SysYParserListener)listener).enterConstDef(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof SysYParserListener ) ((SysYParserListener)listener).exitConstDef(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SysYParserVisitor ) return ((SysYParserVisitor<? extends T>)visitor).visitConstDef(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ConstDefContext constDef() throws RecognitionException {
        ConstDefContext _localctx = new ConstDefContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_constDef);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(78);
                match(IDENT);
                setState(85);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la==L_BRACKT) {
                    {
                        {
                            setState(79);
                            match(L_BRACKT);
                            setState(80);
                            constExp();
                            setState(81);
                            match(R_BRACKT);
                        }
                    }
                    setState(87);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(88);
                match(ASSIGN);
                setState(89);
                constInitVal();
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ConstInitValContext extends ParserRuleContext {
        public ConstExpContext constExp() {
            return getRuleContext(ConstExpContext.class,0);
        }
        public TerminalNode L_BRACE() { return getToken(SysYParser.L_BRACE, 0); }
        public TerminalNode R_BRACE() { return getToken(SysYParser.R_BRACE, 0); }
        public List<ConstInitValContext> constInitVal() {
            return getRuleContexts(ConstInitValContext.class);
        }
        public ConstInitValContext constInitVal(int i) {
            return getRuleContext(ConstInitValContext.class,i);
        }
        public List<TerminalNode> COMMA() { return getTokens(SysYParser.COMMA); }
        public TerminalNode COMMA(int i) {
            return getToken(SysYParser.COMMA, i);
        }
        public ConstInitValContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_constInitVal; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof SysYParserListener ) ((SysYParserListener)listener).enterConstInitVal(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof SysYParserListener ) ((SysYParserListener)listener).exitConstInitVal(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SysYParserVisitor ) return ((SysYParserVisitor<? extends T>)visitor).visitConstInitVal(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ConstInitValContext constInitVal() throws RecognitionException {
        ConstInitValContext _localctx = new ConstInitValContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_constInitVal);
        int _la;
        try {
            setState(104);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case PLUS:
                case MINUS:
                case NOT:
                case L_PAREN:
                case IDENT:
                case INTEGR_CONST:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(91);
                    constExp();
                }
                break;
                case L_BRACE:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(92);
                    match(L_BRACE);
                    setState(101);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS) | (1L << MINUS) | (1L << NOT) | (1L << L_PAREN) | (1L << L_BRACE) | (1L << IDENT) | (1L << INTEGR_CONST))) != 0)) {
                        {
                            setState(93);
                            constInitVal();
                            setState(98);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                            while (_la==COMMA) {
                                {
                                    {
                                        setState(94);
                                        match(COMMA);
                                        setState(95);
                                        constInitVal();
                                    }
                                }
                                setState(100);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                            }
                        }
                    }

                    setState(103);
                    match(R_BRACE);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class VarDeclContext extends ParserRuleContext {
        public BTypeContext bType() {
            return getRuleContext(BTypeContext.class,0);
        }
        public List<VarDefContext> varDef() {
            return getRuleContexts(VarDefContext.class);
        }
        public VarDefContext varDef(int i) {
            return getRuleContext(VarDefContext.class,i);
        }
        public TerminalNode SEMICOLON() { return getToken(SysYParser.SEMICOLON, 0); }
        public List<TerminalNode> COMMA() { return getTokens(SysYParser.COMMA); }
        public TerminalNode COMMA(int i) {
            return getToken(SysYParser.COMMA, i);
        }
        public VarDeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_varDecl; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof SysYParserListener ) ((SysYParserListener)listener).enterVarDecl(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof SysYParserListener ) ((SysYParserListener)listener).exitVarDecl(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SysYParserVisitor ) return ((SysYParserVisitor<? extends T>)visitor).visitVarDecl(this);
            else return visitor.visitChildren(this);
        }
    }

    public final VarDeclContext varDecl() throws RecognitionException {
        VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_varDecl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(106);
                bType();
                setState(107);
                varDef();
                setState(112);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la==COMMA) {
                    {
                        {
                            setState(108);
                            match(COMMA);
                            setState(109);
                            varDef();
                        }
                    }
                    setState(114);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(115);
                match(SEMICOLON);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class VarDefContext extends ParserRuleContext {
        public TerminalNode IDENT() { return getToken(SysYParser.IDENT, 0); }
        public List<TerminalNode> L_BRACKT() { return getTokens(SysYParser.L_BRACKT); }
        public TerminalNode L_BRACKT(int i) {
            return getToken(SysYParser.L_BRACKT, i);
        }
        public List<ConstExpContext> constExp() {
            return getRuleContexts(ConstExpContext.class);
        }
        public ConstExpContext constExp(int i) {
            return getRuleContext(ConstExpContext.class,i);
        }
        public List<TerminalNode> R_BRACKT() { return getTokens(SysYParser.R_BRACKT); }
        public TerminalNode R_BRACKT(int i) {
            return getToken(SysYParser.R_BRACKT, i);
        }
        public TerminalNode ASSIGN() { return getToken(SysYParser.ASSIGN, 0); }
        public InitValContext initVal() {
            return getRuleContext(InitValContext.class,0);
        }
        public VarDefContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_varDef; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof SysYParserListener ) ((SysYParserListener)listener).enterVarDef(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof SysYParserListener ) ((SysYParserListener)listener).exitVarDef(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SysYParserVisitor ) return ((SysYParserVisitor<? extends T>)visitor).visitVarDef(this);
            else return visitor.visitChildren(this);
        }
    }

    public final VarDefContext varDef() throws RecognitionException {
        VarDefContext _localctx = new VarDefContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_varDef);
        int _la;
        try {
            setState(139);
            _errHandler.sync(this);
            switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(117);
                    match(IDENT);
                    setState(124);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la==L_BRACKT) {
                        {
                            {
                                setState(118);
                                match(L_BRACKT);
                                setState(119);
                                constExp();
                                setState(120);
                                match(R_BRACKT);
                            }
                        }
                        setState(126);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(127);
                    match(IDENT);
                    setState(134);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la==L_BRACKT) {
                        {
                            {
                                setState(128);
                                match(L_BRACKT);
                                setState(129);
                                constExp();
                                setState(130);
                                match(R_BRACKT);
                            }
                        }
                        setState(136);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(137);
                    match(ASSIGN);
                    setState(138);
                    initVal();
                }
                break;
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class InitValContext extends ParserRuleContext {
        public ExpContext exp() {
            return getRuleContext(ExpContext.class,0);
        }
        public TerminalNode L_BRACE() { return getToken(SysYParser.L_BRACE, 0); }
        public TerminalNode R_BRACE() { return getToken(SysYParser.R_BRACE, 0); }
        public List<InitValContext> initVal() {
            return getRuleContexts(InitValContext.class);
        }
        public InitValContext initVal(int i) {
            return getRuleContext(InitValContext.class,i);
        }
        public List<TerminalNode> COMMA() { return getTokens(SysYParser.COMMA); }
        public TerminalNode COMMA(int i) {
            return getToken(SysYParser.COMMA, i);
        }
        public InitValContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_initVal; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof SysYParserListener ) ((SysYParserListener)listener).enterInitVal(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof SysYParserListener ) ((SysYParserListener)listener).exitInitVal(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SysYParserVisitor ) return ((SysYParserVisitor<? extends T>)visitor).visitInitVal(this);
            else return visitor.visitChildren(this);
        }
    }

    public final InitValContext initVal() throws RecognitionException {
        InitValContext _localctx = new InitValContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_initVal);
        int _la;
        try {
            setState(154);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case PLUS:
                case MINUS:
                case NOT:
                case L_PAREN:
                case IDENT:
                case INTEGR_CONST:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(141);
                    exp(0);
                }
                break;
                case L_BRACE:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(142);
                    match(L_BRACE);
                    setState(151);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS) | (1L << MINUS) | (1L << NOT) | (1L << L_PAREN) | (1L << L_BRACE) | (1L << IDENT) | (1L << INTEGR_CONST))) != 0)) {
                        {
                            setState(143);
                            initVal();
                            setState(148);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                            while (_la==COMMA) {
                                {
                                    {
                                        setState(144);
                                        match(COMMA);
                                        setState(145);
                                        initVal();
                                    }
                                }
                                setState(150);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                            }
                        }
                    }

                    setState(153);
                    match(R_BRACE);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FuncDefContext extends ParserRuleContext {
        public FuncTypeContext funcType() {
            return getRuleContext(FuncTypeContext.class,0);
        }
        public TerminalNode IDENT() { return getToken(SysYParser.IDENT, 0); }
        public TerminalNode L_PAREN() { return getToken(SysYParser.L_PAREN, 0); }
        public TerminalNode R_PAREN() { return getToken(SysYParser.R_PAREN, 0); }
        public BlockContext block() {
            return getRuleContext(BlockContext.class,0);
        }
        public FuncFParamsContext funcFParams() {
            return getRuleContext(FuncFParamsContext.class,0);
        }
        public FuncDefContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_funcDef; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof SysYParserListener ) ((SysYParserListener)listener).enterFuncDef(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof SysYParserListener ) ((SysYParserListener)listener).exitFuncDef(this);
        }
        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if ( visitor instanceof SysYParserVisitor ) return ((SysYParserVisitor<? extends T>)visitor).visitFuncDef(this);
            else return visitor.visitChildren(this);
        }
    }

    public final FuncDefContext funcDef() throws RecognitionException {
        FuncDefContext _localctx = new FuncDefContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_funcDef);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(156);
                funcType();
                setState(157);
                match(IDENT);
                setState(158);
                match(L_PAREN);
                setState(160);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la==INT) {
                    {
                        setState(159);
                        funcFParams();
                    }
                }
